fix: resolve tsc build error by removing explicit .tsx extension

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,31 @@
+// pilops-frontend/tsconfig.json
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    // [REGRAS BUNDLER/VITE]
+    "moduleResolution": "bundler",
+    "verbatimModuleSyntax": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    // [REGRAS DE TIPAGEM E AMBIENTE]
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "target": "ES2022",
+    "useDefineForClassFields": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "types": ["vite/client"],
+    "isolatedModules": true,
+
+    // [REGRA CRÍTICA PARA O BUILD NA VERCEL]
+    "skipLibCheck": true,
+
+    // [LINTING]
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
+  },
+  "include": ["src"]
 }
